# deltalocal

./: .gitignore  README.md  run.sh
unitycatalog/: BUILD.bazel  MODULE.bazel  clean.sh  non_module_deps.bzl
unitycatalog/provisioner/: setup.sh
